--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -1,1 +1,28 @@
-<p>sidebar works!</p>
+<div class="side-bar">
+    <div><i class="uil uil-ellipsis-h"></i></div>
+    <ul class="side-bar__list list-one">
+        <li >
+            <div class="list-wrapper-item">
+                <i></i>
+                <span class="side-bar__list list-label"></span>
+            </div>
+        </li>
+    </ul>
+    <div class="side-bar__separator"></div>
+    <ul class="side-bar__list list-two">
+        <li >
+            <div class="list-wrapper-item">
+                <i ></i>
+                <span class="side-bar__list list-label"></span>
+            </div>
+        </li>
+    </ul>
+    <div class="side-bar__separator line-separator"></div>
+    <ul class="side-bar__list list-three">
+        <li>
+            <div class="list-wrapper-item">
+                <span class="side-bar__list list-label"></span>
+            </div>
+        </li>
+    </ul>
+</div>
