--- a/src/app/modules/home/page/home-page/home-page.component.html
+++ b/src/app/modules/home/page/home-page/home-page.component.html
@@ -1,3 +1,7 @@
 <app-sidebar></app-sidebar>
+<app-media-player></app-media-player>
+<div class="home-wrapper">
+    <router-outlet></router-outlet>
+</div>
 
-<router-outlet></router-outlet>
+
