--- a/src/app/modules/tracks/tracks-page/tracks-page.component.html
+++ b/src/app/modules/tracks/tracks-page/tracks-page.component.html
@@ -1,1 +1,7 @@
-<p>tracks-page works!</p>
+<div cclass="tracks-page">
+    <!---------section Top (smalll)-->
+<app-section-generic [mode]="'small'" [title]="'¡La mejor música del mundo!'"></app-section-generic>
+<!---section medium -->
+
+<app-section-generic [mode]="'big'" [title]="'Lo mejor de Electrónica'"></app-section-generic>
+</div>
