maquetación de lista de canciones

--- a/src/app/modules/tracks/tracks-page/tracks-page.component.html
+++ b/src/app/modules/tracks/tracks-page/tracks-page.component.html
@@ -1,7 +1,7 @@
 <div cclass="tracks-page">
     <!---------section Top (smalll)-->
-<app-section-generic [mode]="'small'" [title]="'¡La mejor música del mundo!'"></app-section-generic>
+<app-section-generic [mode]="'small'" [title]="'¡La mejor música del mundo!'" [dataTracks]="mockTracksList"></app-section-generic>
 <!---section medium -->
 
-<app-section-generic [mode]="'big'" [title]="'Lo mejor de Electrónica'"></app-section-generic>
+<app-section-generic [mode]="'big'" [title]="'Lo mejor de Electrónica'" [dataTracks]="mockTracksList"></app-section-generic>
 </div>
