--- a/src/app/shared/components/section-generic/section-generic.component.html
+++ b/src/app/shared/components/section-generic/section-generic.component.html
@@ -3,8 +3,8 @@
 
     <div class="section--generic__player--zone">
         <ul class="player--list" [ngClass]="{'card-small':mode === 'small', 'card-big':mode === 'big'}">
-            <li>
-                <app-card-player ></app-card-player>
+            <li *ngFor="let track of  dataTracks">
+                <app-card-player [mode]="mode" [track]="track"></app-card-player>
             </li>
         </ul>
     </div>
